# tradingview-mcp

./: .env.example  .gitignore  ADD_DATA_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  EXAMPLES.md  LICENSE  NOTION_SETUP.md  README.md  SAMPLE_DATA.json  SETUP_COMPLETE.md  TEST_COVERAGE_ANALYSIS.md  pyproject.toml  pytest.ini
src/core/: health.js
src/tradingview_mcp/: __init__.py  daily_sync.py  notion_sync.py  server.py  setup_notion.py
tests/: README.md  __init__.py  conftest.py  launch.test.js  test_helpers.py  test_tools.py
