[project]
name = "tradingview-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for TradingView — technical analysis, screening, and multi-timeframe data for AI assistants."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "whisperingotter29" }]
keywords = ["tradingview", "mcp", "trading", "technical-analysis", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "tradingview-ta>=3.3.0",
    "tradingview-screener>=2.5.0",
    "httpx>=0.27.0",
]

[project.scripts]
tradingview-mcp = "tradingview_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "httpx[testing]>=0.27",
    "pandas>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tradingview_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
